on mobile devices, fix for incorrect display of the dialogs page

--- a/src/components/Dialogs/Dialogs.module.scss
+++ b/src/components/Dialogs/Dialogs.module.scss
@@ -121,18 +121,18 @@
     @media (max-width: 992px){
         padding-right: 15px;
         min-height: 250px;
-        max-height: 350px;
+        max-height: 330px;
     }
     @media (max-width: 391px){
         padding-right: 15px;
         min-height: 200px;
-        max-height: 310px;
+        max-height: 280px;
     }
 
     @media (max-width: 376px){
         padding-right: 15px;
         min-height: 150px;
-        max-height: 200px;
+        max-height: 180px;
     }
 }
 
